find_package(Boost COMPONENTS numpy)
PKG(PSDTools
    DEPENDS
        SimEventV2
        Boost::numpy
        ElecEvent 
        CalibEvent 
        RecEvent 
        EvtNavigator 
        BufferMemMgr
        DataRegistritionSvc
        Identifier 
        RootIOSvc      
        TMVA
        RooFit
        RooFitCore
        Minuit2
        Geometry
)
